2015-06-30  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/khmer_args.py: Changed some error printing to be exceptions
   * tests/{test_script_arguments,test_functions}.py: changed tests to expect
   exceptions and/or to redirect stderr where appropriate.

2015-06-30  Titus Brown  <titus@idyll.org>

   * setup.cfg: changed 'stop=TRUE' to 'stop=FALSE', so that tests do not
   stop running at first failure.

2015-06-30  Kevin Murray  <spam@kdmurray.id.au>

   * scripts/{extract-paired-reads,split-paired-reads}.py: Fix creation of
   default output files even when output files were provided on CLI.

2015-06-29  Sherine Awad  <drmahmoud@ucdavis.edu>

   * Fix bug in naming in interleave-reads.py
   * Add a test function for the new behavior
   * Add 3 test files needed for the testing

2015-06-28  Jacob Fenton  <bocajnotnef@gmail.com>

   * tests/test_sandbox_scripts.py: made error more informative and not crashy
   * sandbox/{estimate_optimal_hash,optimal_args_hashbits}.py: minor cleanups

2015-06-28  Qingpeng Zhang  <qingpeng@msu.edu>

   * sandbox/{estimate_optimal_hash,optimal_args_hashbits}.py: added sandbox 
   methods for estimating memory usage based on desired fp rate, etc.

2015-06-27  Kevin Murray  <spam@kdmurray.id.au>

   * README.rst: Fix link to virtualenv installation instructions.

2015-06-19  Titus Brown  <titus@idyll.org>

   * khmer/__init__.py: split CountingHash into _CountingHash (CPython) and
   CountingHash to mimic Hashbits behavior; pass IOError through
   extract_countinghash_info and extract_hashbits_info so that
   file-does-not-exist errors are correctly reported; fixed FP rate reporting;
   changed to using get_n_primes_near_x to build hashtable sizes; removed
   get_n_primes_above_x, new_hashbits, and new_counting_hash functions.
   * khmer/_khmer.cc: changed tp_flags for KCountingHash so that it could
   be a base class.
   * khmer/khmer_args.py: removed environment variable override for hash size